# kreav

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  README.md  ROADMAP.md  TESTNET_SETUP.md  compose.yml  docker-compose.yml  package-lock.json  package.json
.ai/: architecture.md  context.md  rules.md
.ai/prompts/: architecture-review.md  backend-feature.md  bugfix.md  code-review.md  database-review.md  performance-review.md  refactor.md  security-review.md  stellar-review.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.json  tsconfig.spec.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: acceptance-backend.ts  setup-local-db.sh  smoke.ts
backend/src/: app.module.ts  main.ts
backend/test/: analytics.e2e-spec.ts  auth.e2e-spec.ts  database.e2e-spec.ts  health.e2e-spec.ts  jest-e2e.json  orders.e2e-spec.ts  products.e2e-spec.ts  site.e2e-spec.ts  wallets.e2e-spec.ts  withdrawals.e2e-spec.ts
docs/adr/: ADR-001-Why-Stellar.md  ADR-002-Why-Non-Custodial.md  (+8 more)
frontend/: .dockerignore  CLAUDE.md  Dockerfile  INTEGRATION_PLAN.md  README.md  design.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  role.md  structure.md
integration/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
smartcontarct/: .env.example
smartcontract/: .gitignore  Cargo.toml
smartcontract/src/: lib.rs  test.rs
(+269 files in other folders)
